--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <script crossorigin="anonymous" defer="defer" type="application/javascript" src="https://github.githubassets.com/assets/webgl-globe-d3e3295f0ac2.js"></script>
   
 
-  <title>Mafwbh: Elevating AI utilisation · DozenBillion</title>
+  <title>Mafwbh · DozenBillion</title>
 
 
 
