--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <script crossorigin="anonymous" defer="defer" type="application/javascript" src="https://github.githubassets.com/assets/webgl-globe-d3e3295f0ac2.js"></script>
   
 
-  <title>Mafwbh: Elevating AI utilisation · DozenBillion</title>
+  <title>Mafwbh · DozenBillion</title>
 
 
 
@@ -1458,36 +1458,15 @@
             <span class="sr-only">GitHub on X</span>
           </a>
         </li>
-        <li class="mr-3">
-          <a href="https://www.facebook.com/GitHub" data-analytics-event="{&quot;category&quot;:&quot;Footer&quot;,&quot;action&quot;:&quot;go to Facebook&quot;,&quot;label&quot;:&quot;text:facebook&quot;}" class="color-fg-subtle">
-            <img src="https://github.githubassets.com/assets/facebook-de85282d23e6.svg" width="18" height="18"  class="d-block" loading="lazy" decoding="async" alt="Facebook icon">
-            <span class="sr-only">GitHub on Facebook</span>
-          </a>
-        </li>
-        <li class="mr-3 flex-self-start">
-          <a href="https://www.linkedin.com/company/github" data-analytics-event="{&quot;category&quot;:&quot;Footer&quot;,&quot;action&quot;:&quot;go to Linkedin&quot;,&quot;label&quot;:&quot;text:linkedin&quot;}" class="color-fg-subtle">
-            <img src="https://github.githubassets.com/assets/linkedin-3c0ace8edb5f.svg" width="19" height="18" class="d-block" loading="lazy" decoding="async" alt="Linkedin icon">
-            <span class="sr-only">GitHub on LinkedIn</span>
-          </a>
-        </li>
+        
         <li class="mr-3">
           <a href="https://www.youtube.com/github" data-analytics-event="{&quot;category&quot;:&quot;Footer&quot;,&quot;action&quot;:&quot;go to YouTube&quot;,&quot;label&quot;:&quot;text:youtube&quot;}" class="color-fg-subtle">
             <img src="https://github.githubassets.com/assets/youtube-25bc21e924c8.svg" width="23" height="16"  class="d-block" loading="lazy" decoding="async" alt="YouTube icon">
             <span class="sr-only">GitHub on YouTube</span>
           </a>
         </li>
-        <li class="mr-3">
-          <a href="https://www.twitch.tv/github" data-analytics-event="{&quot;category&quot;:&quot;Footer&quot;,&quot;action&quot;:&quot;go to Twitch&quot;,&quot;label&quot;:&quot;text:twitch&quot;}" class="color-fg-subtle">
-            <img src="https://github.githubassets.com/assets/twitch-e576606a89a7.svg" width="18" height="18"  class="d-block" loading="lazy" decoding="async" alt="Twitch icon">
-            <span class="sr-only">GitHub on Twitch</span>
-          </a>
-        </li>
-        <li class="mr-3">
-          <a href="https://www.tiktok.com/@github" data-analytics-event="{&quot;category&quot;:&quot;Footer&quot;,&quot;action&quot;:&quot;go to tiktok&quot;,&quot;label&quot;:&quot;text:tiktok&quot;}" class="color-fg-subtle">
-            <img src="https://github.githubassets.com/assets/tiktok-5d12d948d920.svg" width="18" height="18"  class="d-block" loading="lazy" decoding="async" alt="TikTok icon">
-            <span class="sr-only">GitHub on TikTok</span>
-          </a>
-        </li>
+
+        
         <li>
           <a href="https://github.com/github" data-analytics-event="{&quot;category&quot;:&quot;Footer&quot;,&quot;action&quot;:&quot;go to github&#39;s org&quot;,&quot;label&quot;:&quot;text:github&quot;}" class="color-fg-subtle">
             <img src="https://github.githubassets.com/assets/github-mark-9be88460eaa6.svg" width="20" height="20" class="d-block" loading="lazy" decoding="async" alt="GitHub mark">
@@ -1498,7 +1477,7 @@
 
       <ul class="list-style-none d-flex flex-wrap color-fg-muted">
         <li class="mx-2">
-          &copy; 2024 GitHub, Inc.
+          &copy; 2024 Mafwbh, Inc.
         </li>
 
         <li class="mx-2">
