--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
 
   <meta name="browser-errors-url" content="https://api.github.com/_private/browser/errors">
 
-  <link rel="mask-icon" href="/logo.png" color="#000000">
+  <link rel="mask-icon" href="/favicon.svg" color="#000000">
   <link rel="alternate icon" class="js-site-favicon" type="image/png" href="/logo.png">
-  <link rel="icon" class="js-site-favicon" type="image/svg+xml" href="/logo.png">
+  <link rel="icon" class="js-site-favicon" type="image/svg+xml" href="/favicon.svg">
 
 <meta name="theme-color" content="#1e2327">
 
