--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     
       <meta name="description" content="GitHub is where over 100 million developers shape the future of software, together. Contribute to the open source community, manage your Git repositories, review code like a pro, track bugs and features, power your CI/CD and DevOps workflows, and secure code before you commit it.">
       <link rel="search" type="application/opensearchdescription+xml" href="/opensearch.xml" title="GitHub">
-    <link rel="fluid-icon" href="https://github.com/fluidicon.png" title="GitHub">
+    <link rel="fluid-icon" href="logo.png" title="GitHub">
     <meta property="fb:app_id" content="1401488693436528">
     <meta name="apple-itunes-app" content="app-id=1477376905, app-argument=https://github.com/" />
       <meta name="twitter:image:src" content="https://github.githubassets.com/assets/campaign-social-031d6161fa10.png" /><meta name="twitter:site" content="@github" /><meta name="twitter:card" content="summary_large_image" /><meta name="twitter:title" content="GitHub: Let’s build from here" /><meta name="twitter:description" content="GitHub is where over 100 million developers shape the future of software, together. Contribute to the open source community, manage your Git repositories, review code like a pro, track bugs and fea..." />
@@ -170,9 +170,9 @@
 
   <meta name="browser-errors-url" content="https://api.github.com/_private/browser/errors">
 
-  <link rel="mask-icon" href="/favicon.svg" color="#000000">
-  <link rel="alternate icon" class="js-site-favicon" type="image/png" href="/logo.png">
-  <link rel="icon" class="js-site-favicon" type="image/svg+xml" href="/favicon.svg">
+  <link rel="mask-icon" href="favicon.svg" color="#000000">
+  <link rel="alternate icon" class="js-site-favicon" type="image/png" href="logo.png">
+  <link rel="icon" class="js-site-favicon" type="image/svg+xml" href="favicon.svg">
 
 <meta name="theme-color" content="#1e2327">
 
