--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   
 
   <meta name="selected-link" value="/" data-turbo-transient>
-  <link rel="assets" href="https://github.githubassets.com/">
+  
 
     <meta name="google-site-verification" content="c1kuD-K2HIVF635lypcsWPoD4kilo5-jA_wBFyT4uMY">
   <meta name="google-site-verification" content="KT5gs8h0wvaagLKAVWq8bbeNwnZZK1r1XQysX3xurLU">
@@ -92,7 +92,7 @@
   <meta name="google-site-verification" content="GXs5KoUUkNCoaAZn7wPN-t01Pywp9M3sEjnt_3_ZWPc">
   <meta name="google-site-verification" content="Apib7-x98H0j5cPqHWwSMm6dNU4GmODRoqxLiDzdx9I">
 
-<meta name="octolytics-url" content="https://collector.github.com/github/collect" />
+
 
   
 
@@ -102,7 +102,6 @@
 
 
 
-    <meta name="user-login" content="">
 
   
 
@@ -152,8 +151,8 @@
   <meta name="browser-stats-url" content="https://api.github.com/_private/browser/stats">
 
   <meta name="browser-errors-url" content="https://api.github.com/_private/browser/errors">
-
-  <link rel="mask-icon" href="favicon.svg" color="#000000">
+  <link rel="shortcut icon" type="x-icon" href="logo.png">
+  <link rel="mask-icon" href="favicon.svg">
   <link rel="alternate icon" class="js-site-favicon" type="image/png" href="logo.png">
   <link rel="icon" class="js-site-favicon" type="image/svg+xml" href="favicon.svg">
 
