--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
         
 
         <div
-          style="background: linear-gradient(#7C72FF, #2DA44E 80%, #3FB950);"
+          style="background: linear-gradient(#72ff95, #2DA44E 80%, #3FB950);"
           class="home-campaign-git-line height-full rounded mx-auto"
         ></div>
       </div>
