--- a/index.html
+++ b/index.html
@@ -444,11 +444,11 @@
         </div>
 
         <h1 class="h0-mktg mb-3 position-relative z-2">
-          <span style="font-size: 1.2em">Let’s build from&nbsp;here</span>
+          <span style="font-size: 1.2em">We're Mafwbh</span>
         </h1>
 
         <p class="f2-mktg text-normal color-fg-muted mb-3 mb-md-10 position-relative z-1">
-          The world’s leading AI-powered developer platform.
+          Asia's first AI Accelerated agency Supercharged by Vercel and Github.
         </p>
 
         <div class="d-flex flex-column flex-md-row">
