--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
         </div>
 
         <h1 class="h0-mktg mb-3 position-relative z-2">
-          <span style="font-size: 1.2em">We're Mafwbh</span>
+          <span style="font-size: 1.2em" class="f5-mktg text-gradient-purple-coral text-bold pb-1>We're Mafwbh</span>
         </h1>
 
         <p class="f2-mktg text-normal color-fg-muted mb-3 mb-md-10 position-relative z-1">
