--- a/index.html
+++ b/index.html
@@ -444,8 +444,9 @@
         </div>
 
         <h1 class="h0-mktg mb-3 position-relative z-2">
-          <span style="font-size: 1.2em">We're Mafwbh </span>
-        </h1>
+          <span style="font-size: 1.2em; background-image: linear-gradient(to right, #ff00cc, #3333ff); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">We're <span style="color: inherit;">Mafwbh</span></span>
+      </h1>
+      
 
         <p class="f2-mktg text-normal color-fg-muted mb-3 mb-md-10 position-relative z-1">
           Asia's first AI Accelerated agency Supercharged by Vercel and Github.
