--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
       
 
         <p class="f2-mktg text-normal color-fg-muted mb-3 mb-md-10 position-relative z-1">
-          Asia's first AI Accelerated agency <span style="background: linear-gradient(45deg, #EA047E, #00F5FF); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">Supercharged </span>by Vercel and Github.
+          Asia's first AI Accelerated agency <span style="background: linear-gradient(45deg, #00FFAB, #B8F1B0, #E3FCBF); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">Supercharged </span>by Vercel and Github.
         </p>
 
         <div class="d-flex flex-column flex-md-row">
