--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 <div class="overflow-hidden" data-color-mode=dark data-light-theme=light data-dark-theme=dark>
   <div class="container-xl position-relative">
   <img alt="" aria-hidden="true" width="2236" height="1630" class="position-absolute top-0 height-auto events-none d-none d-sm-block" style="width: min(1118px, max(100vh, 100vw)); left: 67%;" src="/twirl.png" />
-  <img alt="" aria-hidden="true" width="860" height="544" class="events-none d-sm-none width-full height-auto mb-n3" src="/twirl.png" />
+  <img alt="" aria-hidden="true" width="860" height="544" class="events-none d-sm-none width-full height-auto mb-n3" src="e-zruPvthI-N2ahs.mp4" />
 </div>
 
   <div class="px-3 home-campaign-hero">
