--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
       <h2 class="h5-mktg mb-4 text-medium">Productivity</h2>
       <h3 class="h3-mktg mb-4 text-medium">
         <span class="text-accent-primary d-block">Accelerate innovation</span>
-        Our AI-powered platform increases the pace of software development.
+        Our AI-powered workforce increases the pace of website development.
       </h3>
     </div>
 
