--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
   </div>
 
   <div class="js-build-in-trigger">
-    <img alt="" aria-hidden="true" width="2496" height="1302" class="width-full d-block height-auto position-relative z-1 rounded-3 border js-build-in-item build-in-slideX-right" loading="lazy" decoding="async" src="https://github.githubassets.com/assets/illu-copilot-editor-6474457a5b19.png" />
+    <img alt="" aria-hidden="true" width="2496" height="1302" class="width-full d-block height-auto position-relative z-1 rounded-3 border js-build-in-item build-in-slideX-right" loading="lazy" decoding="async" src="GHDAQvuasAAgjWk.png" />
   </div>
 
   <div class="d-flex js-build-in-trigger position-relative" data-build-in-stagger="100">
