--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
           
         <div class="d-flex flex-column position-relative">
           <div class="js-build-in-item build-in-slideX-right overflow-hidden rounded-3 position-relative z-1 d-none d-md-block" style="max-width: 480px; margin-top: -100%">
-            <img src="https://github.githubassets.com/assets/illu-copilot-sidebar-3d2efb504577.png" loading="lazy" width="960" height="1222" alt="" decoding="async" class="width-full d-block height-auto">
+            <img src="GGpEg0uWkAEr2RS.jpg" loading="lazy" width="960" height="1222" alt="" decoding="async" class="width-full d-block height-auto">
           </div>
 
           <div class="js-build-in-item build-in-slideX-right overflow-hidden rounded-3 position-absolute right-3 bottom-3 bottom-sm-0 z-1 d-md-none" style="max-width: 60%;">
