--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
           </div>
 
           <div class="js-build-in-item build-in-slideX-right overflow-hidden rounded-3 position-absolute right-3 bottom-3 bottom-sm-0 z-1 d-md-none" style="max-width: 60%;">
-            <img src="https://github.githubassets.com/assets/illu-copilot-sidebar-3d2efb504577.png" loading="lazy" width="960" height="1222" alt="" decoding="async" class="width-full d-block height-auto">
+            <img src="GGpEg0uWkAEr2RS.jpg" loading="lazy" width="960" height="1222" alt="" decoding="async" class="width-full d-block height-auto">
           </div>
 
           <img alt="" aria-hidden="true" width="1000" height="1000" class="position-absolute d-none d-md-block events-none js-build-in-item build-in-fade" style="bottom: -300px; right: -200px;" loading="lazy" decoding="async" src="https://github.githubassets.com/assets/bg-glow-purple-6e9a6a96cb04.png" />
