--- a/index.html
+++ b/index.html
@@ -571,11 +571,11 @@
           
         <div class="d-flex flex-column position-relative">
           <div class="js-build-in-item build-in-slideX-right overflow-hidden rounded-3 position-relative z-1 d-none d-md-block" style="max-width: 480px; margin-top: -100%">
-            <img src="GGpEg0uWkAEr2RS.jpg" loading="lazy" width="960" height="1222" alt="" decoding="async" class="width-full d-block height-auto">
+            <img src="927883a9-fc91-4de7-a434-ecf48acf819c.jpg" loading="lazy" width="960" height="1222" alt="" decoding="async" class="width-full d-block height-auto">
           </div>
 
           <div class="js-build-in-item build-in-slideX-right overflow-hidden rounded-3 position-absolute right-3 bottom-3 bottom-sm-0 z-1 d-md-none" style="max-width: 60%;">
-            <img src="GGpEg0uWkAEr2RS.jpg" loading="lazy" width="960" height="1222" alt="" decoding="async" class="width-full d-block height-auto">
+            <img src="927883a9-fc91-4de7-a434-ecf48acf819c.jpg" loading="lazy" width="960" height="1222" alt="" decoding="async" class="width-full d-block height-auto">
           </div>
 
           <img alt="" aria-hidden="true" width="1000" height="1000" class="position-absolute d-none d-md-block events-none js-build-in-item build-in-fade" style="bottom: -300px; right: -200px;" loading="lazy" decoding="async" src="https://github.githubassets.com/assets/bg-glow-purple-6e9a6a96cb04.png" />
