--- a/index.html
+++ b/index.html
@@ -613,9 +613,9 @@
 </a></div>
 </div>
       <div class="overflow-hidden col-md-6 rounded-right-3"><picture>
-  <source srcset="https://github.githubassets.com/assets/illu-actions-2-c5178134f381.png?width=1306&amp;format=webpll 1306w,https://github.githubassets.com/assets/illu-actions-2-c5178134f381.png?width=1044&amp;format=webpll 1044w,https://github.githubassets.com/assets/illu-actions-2-c5178134f381.png?width=783&amp;format=webpll 783w,https://github.githubassets.com/assets/illu-actions-2-c5178134f381.png?width=653&amp;format=webpll 653w,https://github.githubassets.com/assets/illu-actions-2-c5178134f381.png?width=522&amp;format=webpll 522w,https://github.githubassets.com/assets/illu-actions-2-c5178134f381.png?width=261&amp;format=webpll 261w" sizes="(max-width: 768px) 90vw, (max-width: 1280px) 50vw, 653px" type="image/webp"></source>
-  <source srcset="https://github.githubassets.com/assets/illu-actions-2-c5178134f381.png 1306w,https://github.githubassets.com/assets/illu-actions-2-c5178134f381.png?width=653 653w,https://github.githubassets.com/assets/illu-actions-2-c5178134f381.png?width=522 522w,https://github.githubassets.com/assets/illu-actions-2-c5178134f381.png?width=326 326w" sizes="(max-width: 768px) 90vw, (max-width: 1280px) 50vw, 653px" type="image/png"></source>
-  <img class="width-full d-block height-auto" width="1306" height="992" loading="lazy" decoding="async" alt="" aria-hidden="true" src="https://github.githubassets.com/assets/illu-actions-2-c5178134f381.png" />
+  <source srcset="GHDAPTEa4AAz9RV.jpg?width=1306&amp;format=webpll 1306w,GHDAPTEa4AAz9RV.jpg?width=1044&amp;format=webpll 1044w,GHDAPTEa4AAz9RV.jpg?width=783&amp;format=webpll 783w,GHDAPTEa4AAz9RV.jpg?width=653&amp;format=webpll 653w,GHDAPTEa4AAz9RV.jpg?width=522&amp;format=webpll 522w,GHDAPTEa4AAz9RV.jpg?width=261&amp;format=webpll 261w" sizes="(max-width: 768px) 90vw, (max-width: 1280px) 50vw, 653px" type="image/webp"></source>
+  <source srcset="GHDAPTEa4AAz9RV.jpg 1306w,GHDAPTEa4AAz9RV.jpg?width=653 653w,GHDAPTEa4AAz9RV.jpg?width=522 522w,GHDAPTEa4AAz9RV.jpg?width=326 326w" sizes="(max-width: 768px) 90vw, (max-width: 1280px) 50vw, 653px" type="image/png"></source>
+  <img class="width-full d-block height-auto" width="1306" height="992" loading="lazy" decoding="async" alt="" aria-hidden="true" src="GHDAPTEa4AAz9RV.jpg" />
 </picture></div>
       
 
