--- a/index.html
+++ b/index.html
@@ -661,13 +661,14 @@
 </a></div>
 </div>
 <div class="overflow-hidden rounded-bottom-3">
-  <video class="width-full d-block height-auto js-build-in-item build-in-scale-fade" width="1208" height="764" loading="lazy" autoplay muted loop>
+  <video class="width-full d-block height-auto js-build-in-item build-in-scale-fade" width="1208" height="764" loading="lazy" autoplay muted loop style="transform: scale(1.1);">
     <!-- Video source -->
     <source src="6xJxSO_KHe7pbcWj.mp4" type="video/mp4">
     <!-- Fallback content if video isn't supported -->
     Your browser does not support the video tag.
   </video>
 </div>
+
       
 
       <div data-target="card-skew.shine" class="position-absolute bottom-0 right-0 events-none z-n1"></div>
