--- a/index.html
+++ b/index.html
@@ -701,9 +701,9 @@
     </div>
 
     <div class="col-11 col-lg-7 ml-2 ml-md-0 mb-6 mb-md-10 pr-lg-3">
-      <h3 class="h5-mktg mb-4 text-medium js-build-in-item build-in-slideX-left">Application security</h3>
+      <h3 class="h5-mktg mb-4 text-medium js-build-in-item build-in-slideX-left">Post-Host security</h3>
       <h2 class="h3-mktg mb-4 text-medium js-build-in-item build-in-slideX-left">
-        <span class="text-accent-primary d-block">Empower developers</span> With GitHub, you can secure code in minutes.
+        <span class="text-accent-primary d-block">We are Supercharged</span> Your website being supercharged by Vercel based on AWS and storage on Github, we assure a secure management post-host.
       </h2>
     </div>
 
