--- a/index.html
+++ b/index.html
@@ -713,8 +713,8 @@
   <card-skew class="overflow-hidden rounded-3 mb-3 mb-md-5 position-relative z-1">
     <div class="color-bg-subtle border rounded-3 p-2 p-lg-6 js-build-in-trigger feature-card-mktg z-1 position-relative" data-target="card-skew.bounding" data-build-in-stagger="200">
       <div class="color-fg-subtle p-4">
-        <div class="f5 text-medium">cmake.yml</div>
-        <span class="f6">on: push</span>
+        <div class="f5 text-medium">What keeps your data secure</div>
+        <span class="f6">backend.info</span>
       </div>
 
       <div class="position-relative d-flex flex-column flex-md-row gutter-spacious col-lg-10 mx-auto my-lg-6">
@@ -726,7 +726,7 @@
                     <svg aria-hidden="true" height="24" viewBox="0 0 24 24" version="1.1" width="24" data-view-component="true" class="octicon octicon-check-circle-fill color-fg-success mr-2">
     <path d="M1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm16.28-2.72a.751.751 0 0 0-.018-1.042.751.751 0 0 0-1.042-.018l-5.97 5.97-2.47-2.47a.751.751 0 0 0-1.042.018.751.751 0 0 0-.018 1.042l3 3a.75.75 0 0 0 1.06 0Z"></path>
 </svg>
-                    <span class="text-medium">Build</span>
+                    <span class="text-medium"></span>
                   </div>
                   <span class="f5 color-fg-muted d-none d-sm-block">1m 21s</span>
                 </li>
