--- a/index.html
+++ b/index.html
@@ -726,9 +726,9 @@
                     <svg aria-hidden="true" height="24" viewBox="0 0 24 24" version="1.1" width="24" data-view-component="true" class="octicon octicon-check-circle-fill color-fg-success mr-2">
     <path d="M1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm16.28-2.72a.751.751 0 0 0-.018-1.042.751.751 0 0 0-1.042-.018l-5.97 5.97-2.47-2.47a.751.751 0 0 0-1.042.018.751.751 0 0 0-.018 1.042l3 3a.75.75 0 0 0 1.06 0Z"></path>
 </svg>
-                    <span class="text-medium"></span>
+                    <span class="text-medium">Your Website</span>
                   </div>
-                  <span class="f5 color-fg-muted d-none d-sm-block">1m 21s</span>
+                  <span class="f5 color-fg-muted d-none d-sm-block">99.9% secure</span>
                 </li>
             </ul>
           </div>
@@ -751,27 +751,27 @@
                     <svg aria-hidden="true" height="24" viewBox="0 0 24 24" version="1.1" width="24" data-view-component="true" class="octicon octicon-check-circle-fill color-fg-success mr-2">
     <path d="M1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm16.28-2.72a.751.751 0 0 0-.018-1.042.751.751 0 0 0-1.042-.018l-5.97 5.97-2.47-2.47a.751.751 0 0 0-1.042.018.751.751 0 0 0-.018 1.042l3 3a.75.75 0 0 0 1.06 0Z"></path>
 </svg>
-                    <span class="text-medium">Initialize CodeQL</span>
+                    <span class="text-medium">AWS DDoS- Shield</span>
                   </div>
-                  <span class="f5 color-fg-muted d-none d-sm-block">1m 42s</span>
+                  <span class="f5 color-fg-muted d-none d-sm-block">99.9% Uptime</span>
                 </li>
                 <li class="mb-4 f4-mktg d-flex flex-items-center flex-justify-between js-build-in-item build-in-scale-fade">
                   <div class="d-flex flex-items-center">
                     <svg aria-hidden="true" height="24" viewBox="0 0 24 24" version="1.1" width="24" data-view-component="true" class="octicon octicon-check-circle-fill color-fg-success mr-2">
     <path d="M1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm16.28-2.72a.751.751 0 0 0-.018-1.042.751.751 0 0 0-1.042-.018l-5.97 5.97-2.47-2.47a.751.751 0 0 0-1.042.018.751.751 0 0 0-.018 1.042l3 3a.75.75 0 0 0 1.06 0Z"></path>
 </svg>
-                    <span class="text-medium">Autobuild</span>
+                    <span class="text-medium">AWS WAF & AWS Shield</span>
                   </div>
-                  <span class="f5 color-fg-muted d-none d-sm-block">1m 24s</span>
+                  <span class="f5 color-fg-muted d-none d-sm-block">Never sleeps</span>
                 </li>
                 <li class="mb-4 f4-mktg d-flex flex-items-center flex-justify-between js-build-in-item build-in-scale-fade">
                   <div class="d-flex flex-items-center">
                     <svg aria-hidden="true" height="24" viewBox="0 0 24 24" version="1.1" width="24" data-view-component="true" class="octicon octicon-check-circle-fill color-fg-success mr-2">
     <path d="M1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm16.28-2.72a.751.751 0 0 0-.018-1.042.751.751 0 0 0-1.042-.018l-5.97 5.97-2.47-2.47a.751.751 0 0 0-1.042.018.751.751 0 0 0-.018 1.042l3 3a.75.75 0 0 0 1.06 0Z"></path>
 </svg>
-                    <span class="text-medium">Perform CodeQL Analyses</span>
+                    <span class="text-medium">SOC 1 ;SOC 2; CSA</span>
                   </div>
-                  <span class="f5 color-fg-muted d-none d-sm-block">1m 36s</span>
+                  <span class="f5 color-fg-muted d-none d-sm-block">Ultra ISO std.</span>
                 </li>
             </ul>
           </div>
