--- a/index.html
+++ b/index.html
@@ -811,7 +811,7 @@
           
         <div class="d-flex flex-column position-relative">
           <div class="js-build-in-item build-in-slideX-right border overflow-hidden rounded-2 position-relative left-6 z-1" style="max-width: 541px; margin-top: -30%">
-            <img src="alllight.png" alt="" loading="lazy" decoding="async" width="1084" height="600" class="width-full height-auto d-block">
+            <img src="blackhero.png" alt="" loading="lazy" decoding="async" width="1084" height="600" class="width-full height-auto d-block">
           </div>
 
           <img alt="" aria-hidden="true" width="1000" height="1000" class="position-absolute d-none d-md-block events-none js-build-in-item build-in-fade" style="bottom: -160px; right: -220px;" loading="lazy" decoding="async" src="https://github.githubassets.com/assets/bg-glow-blue-036b8dc2d1ce.png" />
