--- a/index.html
+++ b/index.html
@@ -827,7 +827,7 @@
 </div>
 
           <h3 class="text-accent-primary mb-2 mt-3 h1-mktg text-medium">7x faster</h3>
-          <p class="mb-3 f2-mktg text-medium col-6-max">vulnerability fixes with GitHub<sup>1</sup></p>
+          <p class="mb-3 f2-mktg text-medium col-6-max">vulnerability fixes with Supercharged GitHub<sup>19</sup></p>
         </div>
       </div>
     </div>
@@ -837,17 +837,17 @@
       <card-skew class="overflow-hidden rounded-3 mb-3 mb-md-5">
     <div class="feature-card-mktg d-md-flex rounded-3 color-bg-subtle border position-relative flex-justify-between z-1 height-full flex-row" data-target="card-skew.bounding">
       <div class="d-md-flex flex-column flex-1 p-5 p-sm-6 py-lg-8 pl-lg-8 pr-lg-12 col-md-6 flex-justify-between">
-        <p class="f2-mktg text-medium color-fg-muted mb-4"><em>Code scanning</em> is our code analysis tool that helps you remediate issues in your code.</p>
+        <p class="f2-mktg text-medium color-fg-muted mb-4"><em>Code scanning</em> by supercharged Github helps in analysis to remediate any malacious attacks to your website.</p>
 
         <div>  <a class="link-mktg text-semibold color-fg-default py-1 f3-mktg" href="https://resources.github.com/security/sast/" data-analytics-event="{&quot;category&quot;:&quot;Download the latest SAST ebook&quot;,&quot;action&quot;:&quot;click to Download the latest SAST ebook&quot;,&quot;label&quot;:&quot;ref_cta:Download the latest SAST ebook;&quot;}">
-    Download the latest SAST ebook <svg xmlns="http://www.w3.org/2000/svg" class="octicon arrow-symbol-mktg" width="16" height="16" viewBox="0 0 16 16" fill="none"><path fill="currentColor" d="M7.28033 3.21967C6.98744 2.92678 6.51256 2.92678 6.21967 3.21967C5.92678 3.51256 5.92678 3.98744 6.21967 4.28033L7.28033 3.21967ZM11 8L11.5303 8.53033C11.8232 8.23744 11.8232 7.76256 11.5303 7.46967L11 8ZM6.21967 11.7197C5.92678 12.0126 5.92678 12.4874 6.21967 12.7803C6.51256 13.0732 6.98744 13.0732 7.28033 12.7803L6.21967 11.7197ZM6.21967 4.28033L10.4697 8.53033L11.5303 7.46967L7.28033 3.21967L6.21967 4.28033ZM10.4697 7.46967L6.21967 11.7197L7.28033 12.7803L11.5303 8.53033L10.4697 7.46967Z"></path><path class="octicon-chevrow-stem" stroke="currentColor" d="M1.75 8H11" stroke-width="1.5" stroke-linecap="round"></path></svg>
+    Know more about it <svg xmlns="http://www.w3.org/2000/svg" class="octicon arrow-symbol-mktg" width="16" height="16" viewBox="0 0 16 16" fill="none"><path fill="currentColor" d="M7.28033 3.21967C6.98744 2.92678 6.51256 2.92678 6.21967 3.21967C5.92678 3.51256 5.92678 3.98744 6.21967 4.28033L7.28033 3.21967ZM11 8L11.5303 8.53033C11.8232 8.23744 11.8232 7.76256 11.5303 7.46967L11 8ZM6.21967 11.7197C5.92678 12.0126 5.92678 12.4874 6.21967 12.7803C6.51256 13.0732 6.98744 13.0732 7.28033 12.7803L6.21967 11.7197ZM6.21967 4.28033L10.4697 8.53033L11.5303 7.46967L7.28033 3.21967L6.21967 4.28033ZM10.4697 7.46967L6.21967 11.7197L7.28033 12.7803L11.5303 8.53033L10.4697 7.46967Z"></path><path class="octicon-chevrow-stem" stroke="currentColor" d="M1.75 8H11" stroke-width="1.5" stroke-linecap="round"></path></svg>
 
 </a></div>
 </div>
       <div class="overflow-hidden col-md-6 rounded-right-3"><picture>
-  <source srcset="https://github.githubassets.com/assets/illu-code-scanning-fc9dfb212aa3.png?width=1288&amp;format=webpll 1288w,https://github.githubassets.com/assets/illu-code-scanning-fc9dfb212aa3.png?width=1030&amp;format=webpll 1030w,https://github.githubassets.com/assets/illu-code-scanning-fc9dfb212aa3.png?width=772&amp;format=webpll 772w,https://github.githubassets.com/assets/illu-code-scanning-fc9dfb212aa3.png?width=644&amp;format=webpll 644w,https://github.githubassets.com/assets/illu-code-scanning-fc9dfb212aa3.png?width=515&amp;format=webpll 515w,https://github.githubassets.com/assets/illu-code-scanning-fc9dfb212aa3.png?width=257&amp;format=webpll 257w" sizes="(max-width: 768px) 90vw, (max-width: 1280px) 50vw, 644px" type="image/webp"></source>
-  <source srcset="https://github.githubassets.com/assets/illu-code-scanning-fc9dfb212aa3.png 1288w,https://github.githubassets.com/assets/illu-code-scanning-fc9dfb212aa3.png?width=644 644w,https://github.githubassets.com/assets/illu-code-scanning-fc9dfb212aa3.png?width=515 515w,https://github.githubassets.com/assets/illu-code-scanning-fc9dfb212aa3.png?width=322 322w" sizes="(max-width: 768px) 90vw, (max-width: 1280px) 50vw, 644px" type="image/png"></source>
-  <img class="width-full d-block height-auto js-build-in-item build-in-scale-fade" width="1288" height="992" loading="lazy" decoding="async" alt="" aria-hidden="true" src="https://github.githubassets.com/assets/illu-code-scanning-fc9dfb212aa3.png" />
+  <source srcset="Security-DarkMode-2-2.png?width=1288&amp;format=webpll 1288w,Security-DarkMode-2-2.png?width=1030&amp;format=webpll 1030w,Security-DarkMode-2-2.png?width=772&amp;format=webpll 772w,Security-DarkMode-2-2.png?width=644&amp;format=webpll 644w,Security-DarkMode-2-2.png?width=515&amp;format=webpll 515w,Security-DarkMode-2-2.png?width=257&amp;format=webpll 257w" sizes="(max-width: 768px) 90vw, (max-width: 1280px) 50vw, 644px" type="image/webp"></source>
+  <source srcset="Security-DarkMode-2-2.png 1288w,Security-DarkMode-2-2.png?width=644 644w,Security-DarkMode-2-2.png?width=515 515w,Security-DarkMode-2-2.png?width=322 322w" sizes="(max-width: 768px) 90vw, (max-width: 1280px) 50vw, 644px" type="image/png"></source>
+  <img class="width-full d-block height-auto js-build-in-item build-in-scale-fade" width="1288" height="992" loading="lazy" decoding="async" alt="" aria-hidden="true" src="Security-DarkMode-2-2.png" />
 </picture></div>
       
 
