--- a/index.html
+++ b/index.html
@@ -870,9 +870,9 @@
 </a></div>
 </div>
       <div class="overflow-hidden rounded-bottom-3"><picture>
-  <source srcset="fgffgfgfg.png?width=1208&amp;format=webpll 1208w,fgffgfgfg.png?width=966&amp;format=webpll 966w,fgffgfgfg.png?width=724&amp;format=webpll 724w,fgffgfgfg.png?width=604&amp;format=webpll 604w,fgffgfgfg.png?width=483&amp;format=webpll 483w,fgffgfgfg.png?width=241&amp;format=webpll 241w" sizes="(max-width: 768px) 90vw, (max-width: 1280px) 50vw, 604px" type="image/webp"></source>
-  <source srcset="fgffgfgfg.png 1208w,fgffgfgfg.png?width=604 604w,fgffgfgfg.png?width=483 483w,fgffgfgfg.png?width=302 302w" sizes="(max-width: 768px) 90vw, (max-width: 1280px) 50vw, 604px" type="image/png"></source>
-  <img class="width-full d-block height-auto js-build-in-item build-in-scale-fade" width="1208" height="764" loading="lazy" decoding="async" alt="" aria-hidden="true" src="fgffgfgfg.png" />
+  <source srcset="Enterprise-LightMode-1-1.png?width=1208&amp;format=webpll 1208w,Enterprise-LightMode-1-1.png?width=966&amp;format=webpll 966w,Enterprise-LightMode-1-1.png?width=724&amp;format=webpll 724w,Enterprise-LightMode-1-1.png?width=604&amp;format=webpll 604w,Enterprise-LightMode-1-1.png?width=483&amp;format=webpll 483w,Enterprise-LightMode-1-1.png?width=241&amp;format=webpll 241w" sizes="(max-width: 768px) 90vw, (max-width: 1280px) 50vw, 604px" type="image/webp"></source>
+  <source srcset="Enterprise-LightMode-1-1.png 1208w,Enterprise-LightMode-1-1.png?width=604 604w,Enterprise-LightMode-1-1.png?width=483 483w,Enterprise-LightMode-1-1.png?width=302 302w" sizes="(max-width: 768px) 90vw, (max-width: 1280px) 50vw, 604px" type="image/png"></source>
+  <img class="width-full d-block height-auto js-build-in-item build-in-scale-fade" width="1208" height="764" loading="lazy" decoding="async" alt="" aria-hidden="true" src="Enterprise-LightMode-1-1.png" />
 </picture></div>
       
 
@@ -893,9 +893,9 @@
 </a></div>
 </div>
       <div class="overflow-hidden rounded-bottom-3"><picture>
-  <source srcset="ryfgfgg.png?width=1208&amp;format=webpll 1208w,ryfgfgg.png?width=966&amp;format=webpll 966w,ryfgfgg.png?width=724&amp;format=webpll 724w,ryfgfgg.png?width=604&amp;format=webpll 604w,ryfgfgg.png?width=483&amp;format=webpll 483w,ryfgfgg.png?width=241&amp;format=webpll 241w" sizes="(max-width: 768px) 90vw, (max-width: 1280px) 50vw, 604px" type="image/webp"></source>
-  <source srcset="ryfgfgg.png 1208w,ryfgfgg.png?width=604 604w,ryfgfgg.png?width=483 483w,ryfgfgg.png?width=302 302w" sizes="(max-width: 768px) 90vw, (max-width: 1280px) 50vw, 604px" type="image/png"></source>
-  <img class="width-full d-block height-auto js-build-in-item build-in-scale-fade" width="1208" height="804" loading="lazy" decoding="async" alt="" aria-hidden="true" src="ryfgfgg.png" />
+  <source srcset="Security-LightMode-1-1.png?width=1208&amp;format=webpll 1208w,Security-LightMode-1-1.png?width=966&amp;format=webpll 966w,Security-LightMode-1-1.png?width=724&amp;format=webpll 724w,Security-LightMode-1-1.png?width=604&amp;format=webpll 604w,Security-LightMode-1-1.png?width=483&amp;format=webpll 483w,Security-LightMode-1-1.png?width=241&amp;format=webpll 241w" sizes="(max-width: 768px) 90vw, (max-width: 1280px) 50vw, 604px" type="image/webp"></source>
+  <source srcset="Security-LightMode-1-1.png 1208w,Security-LightMode-1-1.png?width=604 604w,Security-LightMode-1-1.png?width=483 483w,Security-LightMode-1-1.png?width=302 302w" sizes="(max-width: 768px) 90vw, (max-width: 1280px) 50vw, 604px" type="image/png"></source>
+  <img class="width-full d-block height-auto js-build-in-item build-in-scale-fade" width="1208" height="804" loading="lazy" decoding="async" alt="" aria-hidden="true" src="Security-LightMode-1-1.png" />
 </picture></div>
       
 
