--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@
         <card-skew class="overflow-hidden rounded-3 mb-3 mb-md-5">
     <div class="feature-card-mktg d-md-flex rounded-3 color-bg-subtle border position-relative flex-justify-between z-1 height-full flex-column" data-target="card-skew.bounding">
       <div class="d-md-flex flex-column flex-1 p-5 p-sm-6 py-lg-8 pl-lg-8 pr-lg-12 flex-justify-start">
-        <p class="f2-mktg text-medium color-fg-muted mb-4"><em>Secret scanning</em> automatically looks for partner patterns and prevents fraudulent use of accidentally committed secrets.</p>
+        <p class="f2-mktg text-medium color-fg-muted mb-4"><em>Secret scanning</em> for Supercharged Github automatically looks for partner patterns and prevents fraudulent use of accidentally committed secrets.</p>
 
         <div>  <a class="link-mktg text-semibold color-fg-default py-1 f3-mktg" href="/features/security/code" data-analytics-event="{&quot;category&quot;:&quot;Read about secret scanning&quot;,&quot;action&quot;:&quot;click to Read about secret scanning&quot;,&quot;label&quot;:&quot;ref_cta:Read about secret scanning;&quot;}">
     Read about secret scanning <svg xmlns="http://www.w3.org/2000/svg" class="octicon arrow-symbol-mktg" width="16" height="16" viewBox="0 0 16 16" fill="none"><path fill="currentColor" d="M7.28033 3.21967C6.98744 2.92678 6.51256 2.92678 6.21967 3.21967C5.92678 3.51256 5.92678 3.98744 6.21967 4.28033L7.28033 3.21967ZM11 8L11.5303 8.53033C11.8232 8.23744 11.8232 7.76256 11.5303 7.46967L11 8ZM6.21967 11.7197C5.92678 12.0126 5.92678 12.4874 6.21967 12.7803C6.51256 13.0732 6.98744 13.0732 7.28033 12.7803L6.21967 11.7197ZM6.21967 4.28033L10.4697 8.53033L11.5303 7.46967L7.28033 3.21967L6.21967 4.28033ZM10.4697 7.46967L6.21967 11.7197L7.28033 12.7803L11.5303 8.53033L10.4697 7.46967Z"></path><path class="octicon-chevrow-stem" stroke="currentColor" d="M1.75 8H11" stroke-width="1.5" stroke-linecap="round"></path></svg>
@@ -928,10 +928,10 @@
     </div>
 
     <div class="col-11 col-lg-8 ml-2 ml-md-0 mb-6 mb-md-10 pr-lg-3">
-      <h3 class="h5-mktg mb-4 text-medium js-build-in-item build-in-slideX-left">Collaboration</h3>
+      <h3 class="h5-mktg mb-4 text-medium js-build-in-item build-in-slideX-left">Creativity</h3>
       <h2 class="h3-mktg mb-4 text-medium js-build-in-item build-in-slideX-left">
-        <span class="text-accent-primary d-block">Supercharge collaboration</span>
-        GitHub helps your teams work more efficiently together.
+        <span class="text-accent-primary d-block">Mindblowing designs</span>
+        Our expert designers bring your vision to life effortlessly, sparing you valuable time and effort.
       </h2>
     </div>
 
