--- a/index.html
+++ b/index.html
@@ -939,9 +939,9 @@
   </div>
 
   <picture>
-  <source srcset="https://github.githubassets.com/assets/issues-plan-2-46d1ce1d4519.png?width=2498&amp;format=webpll 2498w,https://github.githubassets.com/assets/issues-plan-2-46d1ce1d4519.png?width=1998&amp;format=webpll 1998w,https://github.githubassets.com/assets/issues-plan-2-46d1ce1d4519.png?width=1498&amp;format=webpll 1498w,https://github.githubassets.com/assets/issues-plan-2-46d1ce1d4519.png?width=1249&amp;format=webpll 1249w,https://github.githubassets.com/assets/issues-plan-2-46d1ce1d4519.png?width=999&amp;format=webpll 999w,https://github.githubassets.com/assets/issues-plan-2-46d1ce1d4519.png?width=499&amp;format=webpll 499w" sizes="(max-width: 1200px) 90vw, 1248px" type="image/webp"></source>
-  <source srcset="https://github.githubassets.com/assets/issues-plan-2-46d1ce1d4519.png 2498w,https://github.githubassets.com/assets/issues-plan-2-46d1ce1d4519.png?width=1249 1249w,https://github.githubassets.com/assets/issues-plan-2-46d1ce1d4519.png?width=999 999w,https://github.githubassets.com/assets/issues-plan-2-46d1ce1d4519.png?width=624 624w" sizes="(max-width: 1200px) 90vw, 1248px" type="image/png"></source>
-  <img class="position-relative z-1 width-full height-auto d-block rounded-3 border box-shadow-card-dark-mktg" width="2498" height="1450" loading="lazy" decoding="async" alt="Illustration of project table view with cards grouped by &#39;Feature planning&#39; phase." src="https://github.githubassets.com/assets/issues-plan-2-46d1ce1d4519.png" />
+  <source srcset="GHDARDna8AA3VtN.jpg?width=2498&amp;format=webpll 2498w,GHDARDna8AA3VtN.jpg?width=1998&amp;format=webpll 1998w,GHDARDna8AA3VtN.jpg?width=1498&amp;format=webpll 1498w,GHDARDna8AA3VtN.jpg?width=1249&amp;format=webpll 1249w,GHDARDna8AA3VtN.jpg?width=999&amp;format=webpll 999w,GHDARDna8AA3VtN.jpg?width=499&amp;format=webpll 499w" sizes="(max-width: 1200px) 90vw, 1248px" type="image/webp"></source>
+  <source srcset="GHDARDna8AA3VtN.jpg 2498w,GHDARDna8AA3VtN.jpg?width=1249 1249w,GHDARDna8AA3VtN.jpg?width=999 999w,GHDARDna8AA3VtN.jpg?width=624 624w" sizes="(max-width: 1200px) 90vw, 1248px" type="image/png"></source>
+  <img class="position-relative z-1 width-full height-auto d-block rounded-3 border box-shadow-card-dark-mktg" width="2498" height="1450" loading="lazy" decoding="async" alt="Illustration of project table view with cards grouped by &#39;Feature planning&#39; phase." src="GHDARDna8AA3VtN.jpg" />
 </picture>
 
   <div class="d-flex position-relative">
