--- a/index.html
+++ b/index.html
@@ -973,7 +973,7 @@
           
         <div class="d-flex flex-column position-relative">
           <div class="js-build-in-item build-in-slideY border box-shadow-mktg-xl overflow-hidden rounded-2 position-relative left-4 z-1" style="max-width: 595px; margin-top: -50%;">
-            <img src="https://github.githubassets.com/assets/illu-projects-2-26077f1dd188.png" alt="" loading="lazy" decoding="async" width="1190" height="964" class="width-full height-auto d-block">
+            <img src="g-1-3.jpg" alt="" loading="lazy" decoding="async" width="1190" height="964" class="width-full height-auto d-block">
           </div>
 
           <img alt="" aria-hidden="true" width="1000" height="1000" class="position-absolute d-none d-md-block events-none js-build-in-item build-in-fade" style="bottom: -300px; right: -240px;" loading="lazy" decoding="async" src="https://github.githubassets.com/assets/bg-glow-purple-6e9a6a96cb04.png" />
