--- a/index.html
+++ b/index.html
@@ -1032,9 +1032,9 @@
 </a></div>
 </div>
       <div class="overflow-hidden rounded-bottom-3"><picture>
-  <source srcset="GGpFTWZW0AAXCv6.jpg?width=1208&amp;format=webpll 1208w,GGpFTWZW0AAXCv6.jpg?width=966&amp;format=webpll 966w,GGpFTWZW0AAXCv6.jpg?width=724&amp;format=webpll 724w,GGpFTWZW0AAXCv6.jpg?width=604&amp;format=webpll 604w,GGpFTWZW0AAXCv6.jpg?width=483&amp;format=webpll 483w,GGpFTWZW0AAXCv6.jpg?width=241&amp;format=webpll 241w" sizes="(max-width: 768px) 90vw, (max-width: 1280px) 50vw, 604px" type="image/webp"></source>
-  <source srcset="GGpFTWZW0AAXCv6.jpg 1208w,GGpFTWZW0AAXCv6.jpg?width=604 604w,GGpFTWZW0AAXCv6.jpg?width=483 483w,GGpFTWZW0AAXCv6.jpg?width=302 302w" sizes="(max-width: 768px) 90vw, (max-width: 1280px) 50vw, 604px" type="image/png"></source>
-  <img class="width-full d-block height-auto js-build-in-item build-in-scale-up" width="1208" height="804" loading="lazy" decoding="async" alt="" aria-hidden="true" src="GGpFTWZW0AAXCv6.jpg" />
+  <source srcset="GGpFTWZW0AAXCv6.png?width=1208&amp;format=webpll 1208w,GGpFTWZW0AAXCv6.png?width=966&amp;format=webpll 966w,GGpFTWZW0AAXCv6.png?width=724&amp;format=webpll 724w,GGpFTWZW0AAXCv6.png?width=604&amp;format=webpll 604w,GGpFTWZW0AAXCv6.png?width=483&amp;format=webpll 483w,GGpFTWZW0AAXCv6.png?width=241&amp;format=webpll 241w" sizes="(max-width: 768px) 90vw, (max-width: 1280px) 50vw, 604px" type="image/webp"></source>
+  <source srcset="GGpFTWZW0AAXCv6.png 1208w,GGpFTWZW0AAXCv6.png?width=604 604w,GGpFTWZW0AAXCv6.png?width=483 483w,GGpFTWZW0AAXCv6.png?width=302 302w" sizes="(max-width: 768px) 90vw, (max-width: 1280px) 50vw, 604px" type="image/png"></source>
+  <img class="width-full d-block height-auto js-build-in-item build-in-scale-up" width="1208" height="804" loading="lazy" decoding="async" alt="" aria-hidden="true" src="GGpFTWZW0AAXCv6.png" />
 </picture></div>
       
 
