--- a/index.html
+++ b/index.html
@@ -1048,10 +1048,10 @@
     <card-skew class="overflow-hidden rounded-3 mb-3 mb-md-5">
     <div class="feature-card-mktg d-md-flex rounded-3 color-bg-subtle border position-relative flex-justify-between z-1 height-full flex-row" data-target="card-skew.bounding">
       <div class="d-md-flex flex-column flex-1 p-5 p-sm-6 py-lg-8 pl-lg-8 pr-lg-12 col-md-6 flex-justify-between">
-        <p class="f2-mktg text-medium color-fg-muted mb-4"><em>GitHub Sponsors</em> lets you support your favorite open source maintainers and projects.</p>
+        <p class="f2-mktg text-medium color-fg-muted mb-4"><em>We are Mafwbh</em> we are the best corporate web designers.</p>
 
         <div>  <a class="link-mktg text-semibold color-fg-default py-1 f3-mktg" href="/sponsors" data-analytics-event="{&quot;category&quot;:&quot;Invest with GitHub Sponsors&quot;,&quot;action&quot;:&quot;click to Invest with GitHub Sponsors&quot;,&quot;label&quot;:&quot;ref_cta:Invest with GitHub Sponsors;&quot;}">
-    Invest with GitHub Sponsors <svg xmlns="http://www.w3.org/2000/svg" class="octicon arrow-symbol-mktg" width="16" height="16" viewBox="0 0 16 16" fill="none"><path fill="currentColor" d="M7.28033 3.21967C6.98744 2.92678 6.51256 2.92678 6.21967 3.21967C5.92678 3.51256 5.92678 3.98744 6.21967 4.28033L7.28033 3.21967ZM11 8L11.5303 8.53033C11.8232 8.23744 11.8232 7.76256 11.5303 7.46967L11 8ZM6.21967 11.7197C5.92678 12.0126 5.92678 12.4874 6.21967 12.7803C6.51256 13.0732 6.98744 13.0732 7.28033 12.7803L6.21967 11.7197ZM6.21967 4.28033L10.4697 8.53033L11.5303 7.46967L7.28033 3.21967L6.21967 4.28033ZM10.4697 7.46967L6.21967 11.7197L7.28033 12.7803L11.5303 8.53033L10.4697 7.46967Z"></path><path class="octicon-chevrow-stem" stroke="currentColor" d="M1.75 8H11" stroke-width="1.5" stroke-linecap="round"></path></svg>
+    About Us <svg xmlns="http://www.w3.org/2000/svg" class="octicon arrow-symbol-mktg" width="16" height="16" viewBox="0 0 16 16" fill="none"><path fill="currentColor" d="M7.28033 3.21967C6.98744 2.92678 6.51256 2.92678 6.21967 3.21967C5.92678 3.51256 5.92678 3.98744 6.21967 4.28033L7.28033 3.21967ZM11 8L11.5303 8.53033C11.8232 8.23744 11.8232 7.76256 11.5303 7.46967L11 8ZM6.21967 11.7197C5.92678 12.0126 5.92678 12.4874 6.21967 12.7803C6.51256 13.0732 6.98744 13.0732 7.28033 12.7803L6.21967 11.7197ZM6.21967 4.28033L10.4697 8.53033L11.5303 7.46967L7.28033 3.21967L6.21967 4.28033ZM10.4697 7.46967L6.21967 11.7197L7.28033 12.7803L11.5303 8.53033L10.4697 7.46967Z"></path><path class="octicon-chevrow-stem" stroke="currentColor" d="M1.75 8H11" stroke-width="1.5" stroke-linecap="round"></path></svg>
 
 </a></div>
 </div>
@@ -1088,8 +1088,8 @@
 </a>        </div>
         <div class="col-6 col-sm-4 col-md-6 col-lg-4">
           <a target="_blank" class="rounded p-4 border color-bg-subtle no-underline d-flex flex-column flex-items-center m-2 box-shadow-default-mktg js-build-in-item build-in-scale-up" tabindex="-1" href="/eslint">
-            <img alt="ESLint avatar" width="96" height="96" class="d-block rounded" loading="lazy" decoding="async" src="https://github.githubassets.com/assets/eslint-33bd6140c37f.png" />
-            <div class="color-fg-muted text-truncate my-2">ESLint</div>
+            <img alt="ESLint avatar" width="96" height="96" class="d-block rounded" loading="lazy" decoding="async" src="astro.png" />
+            <div class="color-fg-muted text-truncate my-2">Ayush S.</div>
             <button tabindex="-1" type="button" data-view-component="true" class="Button--secondary Button--medium Button">  <span class="Button-content">
       <span class="Button-visual Button-leadingVisual">
         <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" data-view-component="true" class="octicon octicon-heart">
