--- a/index.html
+++ b/index.html
@@ -1088,7 +1088,7 @@
 </a>        </div>
         <div class="col-6 col-sm-4 col-md-6 col-lg-4">
           <a target="_blank" class="rounded p-4 border color-bg-subtle no-underline d-flex flex-column flex-items-center m-2 box-shadow-default-mktg js-build-in-item build-in-scale-up" tabindex="-1" href="/eslint">
-            <img alt="ESLint avatar" width="96" height="96" class="d-block rounded" loading="lazy" decoding="async" src="astro.png" />
+            <img alt="ESLint avatar" width="96" height="96" class="d-block rounded" loading="lazy" decoding="async" src="astro" />
             <div class="color-fg-muted text-truncate my-2">Ayush S.</div>
             <button tabindex="-1" type="button" data-view-component="true" class="Button--secondary Button--medium Button">  <span class="Button-content">
       <span class="Button-visual Button-leadingVisual">
