--- a/index.html
+++ b/index.html
@@ -1061,7 +1061,7 @@
         <div class="col-6 col-sm-4 col-md-6 col-lg-4">
           <a target="_blank" class="rounded p-4 border color-bg-subtle no-underline d-flex flex-column flex-items-center m-2 box-shadow-default-mktg js-build-in-item build-in-scale-up" tabindex="-1" >
             <img alt="chaynHQ avatar" width="96" height="96" class="d-block rounded" loading="lazy" decoding="async" src="awwwards.png" />
-            <div class="color-fg-muted text-truncate my-2">Awwwards/div>
+            <div class="color-fg-muted text-truncate my-2">Awwwards</div>
             <button tabindex="-1" type="button" data-view-component="true" class="Button--secondary Button--medium Button">  <span class="Button-content">
       <span class="Button-visual Button-leadingVisual">
         <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" data-view-component="true" class="octicon octicon-heart">
