--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
 <div class="overflow-hidden rounded-bottom-3">
   <video class="width-full d-block height-auto js-build-in-item build-in-scale-fade" width="1208" height="764" loading="lazy" autoplay muted loop style="transform: scale(1.5);">
     <!-- Video source -->
-    <source src="6xJxSO_KHe7pbcWj.mp4" type="video/mp4">
+    <source src="7GL1vkmqjFGJja8O.mp4" type="video/mp4">
     <!-- Fallback content if video isn't supported -->
     Your browser does not support the video tag.
   </video>
