--- a/index.html
+++ b/index.html
@@ -1213,8 +1213,8 @@
 
       <div class="col-11 ml-2 ml-md-0">
         <div class="col-md-11 col-lg-9 py-8">
-          <h2 class="h2-mktg mb-5">Over 100 million developers call GitHub home<sup class="f3-mktg" style="vertical-align: super">3</sup></h2>
-          <p class="f3-mktg color-fg-muted">Whether you’re scaling your startup or just learning how to code, GitHub is your home. Join the world’s largest developer platform to build the innovations that empower humanity. Let’s&nbsp;build from&nbsp;here.</p>
+          <h2 class="h2-mktg mb-5">More than 100 businesses and 20 agencies have selected Mafwbh as their trusted partner for website development and management services.<sup class="f3-mktg" style="vertical-align: super">3</sup></h2>
+          <p class="f3-mktg color-fg-muted">Whether you are in the process of scaling your startup or embarking on a new venture, Mafwbh stands ready to support your journey. As India's premier AI Web-Development Agency, we specialize in crafting innovative solutions that bring your ideas to life. Let’s&nbsp;build from&nbsp;here.</p>
         </div>
 
         <div class="pb-2">
@@ -1222,7 +1222,7 @@
     <!-- '"` --><!-- </textarea></xmp> --></option></form><form data-turbo="false" class="mx-0 col-12 col-md-7 col-lg-5 js-signup-form position-relative z-2" autocomplete="off" action="/signup" accept-charset="UTF-8" method="get">      <div class="d-flex flex-column flex-md-row flex-items-center">
         <dl class="col-12 my-0 mb-3 mb-md-0 flex-auto">
           <dt>
-            <label for="user_email" class="sr-only">Email address</label>
+            <label for="user_email" class="sr-only">LETS GOOO</label>
           </dt>
           <dd>
             <input data-color-mode=light data-light-theme=light data-dark-theme=dark class="form-control f4-mktg width-full rounded-md-right-0" style="height: 3rem" placeholder="Email address" type="email" name="user_email" id="user_email" autocomplete="off" spellcheck="false">
@@ -1230,7 +1230,7 @@
         </dl>
         <input type="hidden" name="source" value="form-home-signup">
         <button class="btn-mktg width-full width-md-auto mb-3 mb-md-0 rounded-md-left-0 home-campaign-signup-button btn-signup-mktg" data-analytics-event="{&quot;category&quot;:&quot;Home campaign&quot;,&quot;action&quot;:&quot;click to Sign up for GitHub&quot;,&quot;label&quot;:&quot;ref_page:/;ref_cta:Sign up for GitHub;ref_loc:footer&quot;}" type="submit">
-  Sign up for GitHub
+  Contact Us
   
   
 </button>
@@ -1239,7 +1239,7 @@
   <div class="border-top border-md-left mx-md-3 mb-3 mb-md-0"></div>
 
   <a class="btn-mktg home-campaign-enterprise btn-muted-mktg" data-analytics-event="{&quot;category&quot;:&quot;Start a free enterprise trial&quot;,&quot;action&quot;:&quot;click to Start a free enterprise trial&quot;,&quot;label&quot;:&quot;ref_cta:Start a free enterprise trial;&quot;}" href="/organizations/enterprise_plan?ref_cta=Start+a+free+enterprise+trial&amp;ref_loc=Home+campaign+footer&amp;ref_page=%2F" data-test-selector="start-trial-button">
-  Start a free enterprise trial
+  A free quote ON US!
   
   
 
@@ -1255,8 +1255,8 @@
 <div class="container-xl p-responsive" data-dark-theme="dark" data-color-mode="dark">
   <ul class="list-style-none col-lg-9 color-fg-muted f5">
     <li class="mb-3"><sup id="footnote-1"></sup> </li>
-    <li class="mb-3"><sup id="footnote-2">2</sup> The Total Economic Impact™ Of GitHub Enterprise Cloud and Advanced Security, a commissioned study conducted by Forrester Consulting, 2022. Results are for a composite organization based on interviewed customers.</li>
-    <li class="mb-3"><sup id="footnote-3">3</sup> There are now 100 million developers around the world using GitHub. <a href="https://github.blog/2023-01-25-100-million-developers-and-counting/" class="color-fg-muted text-underline" target="_blank">Read the blog post</a>.</li>
+    <li class="mb-3"><sup id="footnote-2">2</sup> The Total Economic Impact™ Of Mafwbh Enterprise Cloud and Advanced Security, a commissioned study conducted by Forrester Consulting, 2022. Results are for a composite organization based on interviewed customers.</li>
+    <li class="mb-3"><sup id="footnote-3">3</sup> There are now .09 million visitors around the world visiting Mafwbh.</li>
   </ul>
 </div>
 
@@ -1270,19 +1270,18 @@
     <div class="d-flex flex-wrap py-5 mb-5">
       <div class="col-12 col-lg-4 mb-5">
         <a href="/" data-analytics-event="{&quot;category&quot;:&quot;Footer&quot;,&quot;action&quot;:&quot;go to home&quot;,&quot;label&quot;:&quot;text:home&quot;}" class="color-fg-default d-inline-block" aria-label="Go to GitHub homepage">
-          <svg height="30" aria-hidden="true" viewBox="0 0 45 16" version="1.1" width="84" data-view-component="true" class="octicon octicon-logo-github footer-logo-mktg width-auto d-block">
-    <path d="M8.81 7.35v5.74c0 .04-.01.11-.06.13 0 0-1.25.89-3.31.89-2.49 0-5.44-.78-5.44-5.92S2.58 1.99 5.1 2c2.18 0 3.06.49 3.2.58.04.05.06.09.06.14L7.94 4.5c0 .09-.09.2-.2.17-.36-.11-.9-.33-2.17-.33-1.47 0-3.05.42-3.05 3.73s1.5 3.7 2.58 3.7c.92 0 1.25-.11 1.25-.11v-2.3H4.88c-.11 0-.19-.08-.19-.17V7.35c0-.09.08-.17.19-.17h3.74c.11 0 .19.08.19.17Zm35.85 2.33c0 3.43-1.11 4.41-3.05 4.41-1.64 0-2.52-.83-2.52-.83s-.04.46-.09.52c-.03.06-.08.08-.14.08h-1.48c-.1 0-.19-.08-.19-.17l.02-11.11c0-.09.08-.17.17-.17h2.13c.09 0 .17.08.17.17v3.77s.82-.53 2.02-.53l-.01-.02c1.2 0 2.97.45 2.97 3.88ZM27.68 2.43c.09 0 .17.08.17.17v11.11c0 .09-.08.17-.17.17h-2.13c-.09 0-.17-.08-.17-.17l.02-4.75h-3.31v4.75c0 .09-.08.17-.17.17h-2.13c-.08 0-.17-.08-.17-.17V2.6c0-.09.08-.17.17-.17h2.13c.09 0 .17.08.17.17v4.09h3.31V2.6c0-.09.08-.17.17-.17Zm8.26 3.64c.11 0 .19.08.19.17l-.02 7.47c0 .09-.06.17-.17.17H34.6c-.07 0-.14-.04-.16-.09-.03-.06-.08-.45-.08-.45s-1.13.77-2.52.77c-1.69 0-2.92-.55-2.92-2.75V6.25c0-.09.08-.17.17-.17h2.14c.09 0 .17.08.17.17V11c0 .75.22 1.09.97 1.09s1.3-.39 1.3-.39V6.26c0-.11.06-.19.17-.19Zm-17.406 5.971h.005a.177.177 0 0 1 .141.179v1.5c0 .07-.03.14-.09.16-.1.05-.74.22-1.27.22-1.16 0-2.86-.25-2.86-2.69V8.13h-1.11c-.09 0-.17-.08-.17-.19V6.58c0-.08.05-.15.13-.17.07-.01 1.16-.28 1.16-.28V3.96c0-.08.05-.13.14-.13h2.16c.09 0 .14.05.14.13v2.11h1.59c.08 0 .16.08.16.17v1.7c0 .11-.07.19-.16.19h-1.59v3.131c0 .47.27.83 1.05.83.247 0 .481-.049.574-.05ZM12.24 6.06c.09 0 .17.08.17.17v7.37c0 .18-.05.27-.25.27h-1.92c-.17 0-.3-.07-.3-.27V6.26c0-.11.08-.2.17-.2Zm29.99 3.78c0-1.81-.73-2.05-1.5-1.97-.6.04-1.08.34-1.08.34v3.52s.49.34 1.22.36c1.03.03 1.36-.34 1.36-2.25ZM11.19 2.68c.75 0 1.36.61 1.36 1.38 0 .77-.61 1.38-1.36 1.38-.77 0-1.38-.61-1.38-1.38 0-.77.61-1.38 1.38-1.38Zm7.34 9.35v.001l.01.01h-.001l-.005-.001v.001c-.009-.001-.015-.011-.024-.011Z"></path>
+          <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
+ width="500.000000pt" height="200.000000pt" viewBox="0 0 500.000000 200.000000"
+ preserveAspectRatio="xMidYMid meet">
+
+<g transform="translate(0.000000,200.000000) scale(0.100000,-0.100000)"
+fill="#000000" stroke="none">
+</g>
 </svg>
         </a>
 
         <div>
-          <h2 class="h5 mt-4" id="subscribe-to-newsletter">Subscribe to our developer newsletter</h2>
-          <p class="f5 color-fg-muted mb-3">Get tips, technical guides, and best practices. Twice a month. Right in your inbox.</p>
-          <a class="btn-mktg mb-4 btn-muted-mktg" data-analytics-event="{&quot;category&quot;:&quot;Subscribe&quot;,&quot;action&quot;:&quot;click to Subscribe&quot;,&quot;label&quot;:&quot;ref_cta:Subscribe;&quot;}" href="https://resources.github.com/newsletter/">
-  Subscribe
-  
-  
-</a>
+          
         </div>
 
       </div>
