--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
 
       <div class="sub-nav-mktg-links flex-auto f4-mktg d-flex flex-column flex-lg-row gap-4">
           <a class="sub-nav-mktg-link Link--primary no-underline py-1 py-lg-2 js-scrollnav-item js-smoothscroll-anchor" data-analytics-event="{&quot;category&quot;:&quot;Homepage&quot;,&quot;action&quot;:&quot;click item to scroll to Productivity&quot;,&quot;label&quot;:&quot;ref_cta:Productivity;&quot;}" href="#productivity">Productivity</a>
-          <a class="sub-nav-mktg-link Link--primary no-underline py-1 py-lg-2 js-scrollnav-item js-smoothscroll-anchor" data-analytics-event="{&quot;category&quot;:&quot;Homepage&quot;,&quot;action&quot;:&quot;click item to scroll to Collaboration&quot;,&quot;label&quot;:&quot;ref_cta:Collaboration;&quot;}" href="#collaboration">Collaboration</a>
+          <a class="sub-nav-mktg-link Link--primary no-underline py-1 py-lg-2 js-scrollnav-item js-smoothscroll-anchor" data-analytics-event="{&quot;category&quot;:&quot;Homepage&quot;,&quot;action&quot;:&quot;click item to scroll to Collaboration&quot;,&quot;label&quot;:&quot;ref_cta:Collaboration;&quot;}" href="#collaboration">Design</a>
           <a class="sub-nav-mktg-link Link--primary no-underline py-1 py-lg-2 js-scrollnav-item js-smoothscroll-anchor" data-analytics-event="{&quot;category&quot;:&quot;Homepage&quot;,&quot;action&quot;:&quot;click item to scroll to Security&quot;,&quot;label&quot;:&quot;ref_cta:Security;&quot;}" href="#security">Security</a>
       </div>
 
